2003-02-16 Wari Wahab <pyblosxom@wari.per.sg>
	* Pyblosxom core rendering code can now use seperate renderers
	  defined by the user. This means that if a user wants to use other
	  templating system, it possible now. Possibilities includes renderers
	  using Cheetah, Albatross, empy templating system, or even
	  HTML Template that most perl users have known and love. Right now,
	  included renderers are the blosxom templating system and a debug
	  renderer
	* Updated most plugins to include renderers in their load mechanism so
	  that they can use it if needed.

2003-02-11 Wari Wahab <pyblosxom@wari.per.sg>
	* Config.py no longer used an INI file, this will load faster than
	  having an INI file to parse
	* Updated config.py with values that reflect the current pyblosxom CVS
	  state.
	* py['tb_data'] no longer a default value in pyblosxom.py
	* Added a contrib/entryparsers/ directory and basically store what we
	  can handle over there. Users get a standard txt.py entryparser as
	  default
	* Added a modified version of autoping code from Sam Ruby that's cache
	  and entryparsers compliant. Sadly you need to modify one line in the
	  code that states where you you installed pyblosxom (This is not in
	  config)

2003-02-10 Wari Wahab <pyblosxom@wari.per.sg>
	* Added ability for pyblosxom to read entries of different extensions,
	  given a proper extension driver, this means that if you associate
	  .doc files as word documents, and you have libs.entryparsers.doc.py
	  that handles word documents and fill up entryData with the
	  respective data that a template needs, then dropping in such
	  document is easy as creating an entry.
	  Other extensions planned would be XHTML and what nots. These
	  entryparsers do not need to use preformatters, the txt.py '.txt'
	  handler shows how you can use the cache and preformatters if you
	  need it (cache is necesary for slow entryparsers)
	* External utiliies can now use this mechanism to get the data they